@@ -5,3 +5,8 @@ port "2593"
 #auto_reload_user_database "yes"
 #send_remote_ip "yes"
 game_server "testcenter.uosagas.com:2593"
+
+# To show a custom server list, specify multiple game_server lines,
+# each with a "name" parameter:
+#game_server "live.uosagas.com:2593" "Live"
+#game_server "testcenter.uosagas.com:2593" "Test Center"
